; ModuleID = '/home/carl/AnghaBench/vlc/modules/packetizer/extr_mpeg4audio.c_AOTtoAACProfile.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/packetizer/extr_mpeg4audio.c_AOTtoAACProfile.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@AAC_PROFILE_MAIN = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [34 x i8] c"invalid profile to object mapping\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @AOTtoAACProfile to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @AOTtoAACProfile(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %13 [
    i32 134, label %5
    i32 136, label %5
    i32 130, label %5
    i32 135, label %5
    i32 132, label %5
    i32 131, label %5
    i32 128, label %5
    i32 133, label %5
    i32 129, label %5
  ]

5:                                                ; preds = %1, %1, %1, %1, %1, %1, %1, %1, %1
  %6 = load i32, i32* @AAC_PROFILE_MAIN, align 4
  %7 = add nsw i32 %6, 1
  %8 = icmp eq i32 134, %7
  %9 = zext i1 %8 to i32
  %10 = call i32 @static_assert(i32 %9, i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str, i64 0, i64 0))
  %11 = load i32, i32* %3, align 4
  %12 = sub nsw i32 %11, 1
  store i32 %12, i32* %2, align 4
  br label %14

13:                                               ; preds = %1
  store i32 -1, i32* %2, align 4
  br label %14

14:                                               ; preds = %13, %5
  %15 = load i32, i32* %2, align 4
  ret i32 %15
}

declare dso_local i32 @static_assert(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
